--- a/gcc-product/package.json
+++ b/gcc-product/package.json
@@ -23,7 +23,9 @@
     "@angular/platform-server": "^18.0.0",
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.1",
+    "@ionic/angular": "^8.2.1",
     "apexcharts": "^3.49.1",
+    "bootstrap": "^5.3.3",
     "express": "^4.18.2",
     "ng-apexcharts": "^1.10.0",
     "rxjs": "~7.8.0",
